--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 </head>
 <body>
         <io19-countdown date="Oct 10, 2020 05:30 PDT"></io19-countdown>
+        <embed src="./music/score.mp3" width="0" height="0" loop="true" autostart="true" hidden="true" />
     <script type="module" src="./src/io19-countdown.js"></script>
 </body>
 </html>
