--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-        <io19-countdown date="Dec 18, 2020 19:15 IST"></io19-countdown>
+        <io19-countdown date="Dec 18, 2020 13:45 UTC"></io19-countdown>
         <embed src="./music/score.mp3" width="0" height="0" loop="true" autostart="true" hidden="true" />
     <script type="module" src="./src/io19-countdown.js"></script>
 </body>
