--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>I/O 19 Countdown</title>
+    <title>Countdown</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://events.google.com/io/favicon.ico">
     <script src="https://www.gstatic.com/external_hosted/lottie/lottie.js"></script>
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-        <io19-countdown date="Dec 18, 2020 13:45 UTC"></io19-countdown>
+        <io19-countdown date="Jan 8, 2021 13:40 UTC"></io19-countdown>
         <embed src="./music/score.mp3" width="0" height="0" loop="true" autostart="true" hidden="true" />
     <script type="module" src="./src/io19-countdown.js"></script>
 </body>
